# clickup_application

./: .gitignore  README.md  debug.csv  df_debug.csv  manage.py  pyproject.toml  run_dev.py
clickup_consumer/: api_consumer.py  apps.py  models.py  urls.py  views.py
clickup_consumer/management/commands/: export_data.py  sync_clickup_data_direct.py
clickup_consumer/migrations/: 0001_initial.py  0002_clickuptask_registro.py  0003_remove_clickuptask_registro.py  0004_rename_cor_prioridade_clickuptask_cor_prioridade_and_more.py  0005_rename_arquived_clickuptask_arquivado_and_more.py  0006_alter_clickuptask_table.py
clickup_consumer/utils/: get_tasks_from_list.py  transform_list_data.py
clickup_dashboards/: apps.py  dashboard_app.py  projecao_day.py  projecao_week.py  tables_app.py  urls.py  views.py
clickup_dashboards/templates/: dashboards_tamplate.html  index.html
clickup_dashboards/templates/registration/: login.html
clickup_dashboards/utils/: api_conection.py  calculate_dates.py
clickup_main/: asgi.py  settings.py  urls.py  wsgi.py
