[project]
name = "clickup-data"
version = "0.1.0"
description = ""
authors = [
    {name = "BugRed",email = "o.adrian.rodrigues@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "streamlit (>=1.18.0,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "holidays (>=0.80,<0.81)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
]

[tool.poetry]
packages = [
    { include = "clickup_main" },
    { include = "clickup_consumer" },
    { include = "clickup_dashboards" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"